Ermittlung der Regeln